--- a/DeviceManager/Views/Shared/_Layout.cshtml
+++ b/DeviceManager/Views/Shared/_Layout.cshtml
@@ -21,6 +21,8 @@
 
     <link rel="apple-touch-icon" href="~/apple-touch-icon.png" />
 
+    <link rel="stylesheet" href="~/css/app-theme.css" />
+
 
 </head>
 
@@ -112,7 +114,7 @@
                         {
                             var user = await UserManager.GetUserAsync(User);
 
-                            <li class="nav-item me-3">
+                            <li class="nav-item me-4">
                                 <span class="navbar-text fw-semibold">
                                     @user.Email
                                 </span>
@@ -121,9 +123,7 @@
                             <li class="nav-item">
                                 <form method="post" asp-controller="Account" asp-action="Logout">
                                     @Html.AntiForgeryToken()
-                                    <button type="submit" class="btn btn-link nav-link p-0">
-                                        Logout
-                                    </button>
+                                    <button type="submit" class="fw-semibold btn btn-link nav-link p-0"> Logout </button>
                                 </form>
                             </li>
                         }
