--- a/DeviceManager/Views/Account/Login.cshtml
+++ b/DeviceManager/Views/Account/Login.cshtml
@@ -39,9 +39,9 @@
 
         <!-- RIGHT: CTA PANEL -->
         <div class="auth-panel auth-brand">
-            <img src="~/images/logo01.svg" alt="Device Manager Logo" class="auth-logo" />
+            <img src="~/images/logo.svg" alt="Device Manager Logo" class="auth-logo" />
 
-            <h3>Simple Device Manager</h3>
+            <h3 class="text-white">Device Manager</h3>
             <p>Secure internal access portal</p>
         </div>
 
