--- a/DeviceManager/Views/Technicians/Index.cshtml
+++ b/DeviceManager/Views/Technicians/Index.cshtml
@@ -35,3 +35,6 @@
             }
         </tbody>
     </table>
+
+<a asp-action="Deleted" class="btn btn-danger btn-sm"> Deleted Technicians </a>
+
