--- a/DeviceManager/Views/Reports/Index.cshtml
+++ b/DeviceManager/Views/Reports/Index.cshtml
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-    <h5 class="mb-3">Technician Performance</h5>
+   @*  <h5 class="mb-3">Technician Performance</h5>
 
     <table class="table table-sm table-hover">
         <thead class="table-light">
@@ -109,6 +109,6 @@
                 </tr>
             }
         </tbody>
-    </table>
+    </table> *@
 
 </div>
