--- a/DeviceManager/Views/Shared/_Layout.cshtml
+++ b/DeviceManager/Views/Shared/_Layout.cshtml
@@ -31,6 +31,17 @@
     <nav class="top-nav"></nav>
 
     <header>
+
+       @*  @inject DeviceManager.Services.IAdminOverrideService OverrideService
+
+        @if (User.IsInRole("Admin"))
+        {
+            <div class="alert alert-warning text-center mb-0">
+                Admin Emergency Override:
+                <strong>@(OverrideService.IsEnabled() ? "ENABLED" : "DISABLED")</strong>
+            </div>
+        } *@
+
         <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom mb-3">
             <div class="container">
 
@@ -75,13 +86,11 @@
                                 </li>
 
 
-                              @*   <li class="nav-item">                                 
-                                    <a class="nav-link fw-semibold" asp-controller="Technicians" asp-action="Deleted"> Deleted Technicians </a>
-                                </li> *@
+                             
                             }
 
                             @* Manager menu *@
-                            @if (User.IsInRole("Manager"))
+                            @if (User.IsInRole("Manager") || User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
                                     <a class="nav-link fw-semibold" asp-controller="Approvals" asp-action="Index">Approvals</a>
@@ -89,7 +98,7 @@
                             }
 
                             @* Technician menu *@
-                            @if (User.IsInRole("Technician"))
+                            @if (User.IsInRole("Technician") || User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
                                     <a class="nav-link fw-semibold" asp-controller="Technicians" asp-action="MyTasks">My Tasks</a>
