--- a/DeviceManager/Views/Technicians/Index.cshtml
+++ b/DeviceManager/Views/Technicians/Index.cshtml
@@ -1,5 +1,15 @@
 ﻿@model IEnumerable<DeviceManager.Models.Technician>
 
+
+@* @if (User.IsInRole("Admin"))
+{
+    <div class="alert alert-danger">
+        Admin emergency override active.
+        Actions are logged.
+    </div>
+} *@
+
+
 <div class="container py-5">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>Technicians</h2> <a asp-action="Create" class="btn btn-primary">Add Technician</a> 
